--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="350dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -51,14 +57,51 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="35dp"/>
 
-        <ImageView
-            android:id="@+id/iv_profile_pict"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_journal"
+            android:layout_width="180dp"
+            android:layout_height="130dp"
+            android:layout_below="@id/tv_name"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            app:cardElevation="9dp"
+            app:cardCornerRadius="10dp"/>
 
+        <ImageView
+            android:id="@+id/iv_journal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_name"
+            android:layout_centerHorizontal="true"
+            android:elevation="12dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/ic_draw" />
+
+        <TextView
+            android:id="@+id/tv_journal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/poppins_medium"
+            android:textSize="12sp"
+            android:layout_below="@id/iv_journal"
+            android:layout_centerHorizontal="true"
+            android:elevation="12dp"
+            tools:text="Write Daily Month of\nKiddo Journal"/>
 
     </RelativeLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_pick_food"
+        android:layout_width="300dp"
+        android:layout_height="170dp"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
