--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,107 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/pink_board"
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_pink_board_wave"/>
+            android:layout_height="350dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="70dp"
-            android:layout_marginStart="25dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/Welcome"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_below="@id/tv_welcome"
-            android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            tools:text="Annisa"/>
+            <ImageView
+                android:id="@+id/pink_board"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_pink_board_wave" />
 
-        <ImageView
-            android:id="@+id/iv_mom"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/ic_mom"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="35dp"/>
+            <TextView
+                android:id="@+id/tv_welcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="70dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/Welcome"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_welcome"
+                android:layout_marginStart="25dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                tools:text="Annisa" />
+
+            <ImageView
+                android:id="@+id/iv_mom"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="35dp"
+                android:src="@drawable/ic_mom" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_journal"
+                android:layout_width="180dp"
+                android:layout_height="130dp"
+                android:layout_below="@id/tv_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="9dp" />
+
+            <ImageView
+                android:id="@+id/iv_journal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:elevation="12dp"
+                android:src="@drawable/ic_draw" />
+
+            <TextView
+                android:id="@+id/tv_journal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_journal"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="7dp"
+                android:elevation="12dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins_medium"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                tools:text="Write Daily Month of\nKiddo Journal" />
+
+        </RelativeLayout>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_journal"
-            android:layout_width="180dp"
-            android:layout_height="130dp"
-            android:layout_below="@id/tv_name"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/cv_pick_food"
+            android:layout_width="300dp"
+            android:layout_height="170dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="9dp"
-            app:cardCornerRadius="10dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/relativeLayout">
 
-        <ImageView
-            android:id="@+id/iv_journal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_name"
-            android:layout_centerHorizontal="true"
-            android:elevation="12dp"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_detect_food"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="45dp"
+                    android:src="@drawable/ic_detect_food" />
+
+                <TextView
+                    android:id="@+id/tv_title_detect"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginTop="40dp"
+                    android:text="@string/pick_the_food"/>
+
+                <TextView
+                    android:id="@+id/tv_desc_detect"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_title_detect"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="23dp"
+                    android:layout_alignParentEnd="true"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/poppins_reguler"
+                    android:text="@string/desc_detect"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_parenthood"
+            android:layout_width="300dp"
+            android:layout_height="170dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/ic_draw" />
+            app:cardCornerRadius="15dp"
+            app:cardElevation="9dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_pick_food">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_parenthood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="60dp"
+                    android:src="@drawable/ic_blocks" />
+
+                <TextView
+                    android:id="@+id/tv_title_parenthood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="55dp"
+                    android:layout_marginTop="40dp"
+                    android:text="@string/parenthood"/>
+
+                <TextView
+                    android:id="@+id/tv_desc_parenthood"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_title_parenthood"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/poppins_reguler"
+                    android:text="@string/desc_parenthood"/>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/tv_journal"
+            android:id="@+id/tv_title_grow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:textAlignment="center"
             android:fontFamily="@font/poppins_medium"
-            android:textSize="12sp"
-            android:layout_below="@id/iv_journal"
-            android:layout_centerHorizontal="true"
-            android:elevation="12dp"
-            tools:text="Write Daily Month of\nKiddo Journal"/>
+            android:textColor="@color/black"
+            android:text="@string/kiddo_grow_chart"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_parenthood"/>
 
-    </RelativeLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_grow"
+            android:layout_width="300dp"
+            android:layout_height="190dp"
+            android:layout_marginTop="40dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_grow"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_pick_food"
-        android:layout_width="300dp"
-        android:layout_height="170dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="15dp"
-        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
