--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="prime">#B40752</color>
     <color name="prime_secunder">#C30163</color>
+    <color name="prime_dark">#811839</color>
+    <color name="grey">#CACACA</color>
     <color name="pink">#F2BED3</color>
     <color name="pink_dark">#DD4F8A</color>
     <color name="purple_200">#FFBB86FC</color>
