--- a/app/src/main/res/layout/activity_create_journal.xml
+++ b/app/src/main/res/layout/activity_create_journal.xml
@@ -355,7 +355,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_add" />
+            android:src="@drawable/ic_add_circle" />
     </FrameLayout>
 
 
