--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="chooseColor">#171C26</color>
 
     <color name="ColorDefaultNote">#DD4F8A</color>
     <color name="ColorBlueNote">#4e33ff</color>
