Try to connect with console firestore

--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.recipes.DashboardFragment">
+    tools:context=".ui.recipes.recipesFragment">
 
     <TextView
         android:id="@+id/text_dashboard"
@@ -19,4 +19,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:layout_marginBottom="331dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/text_dashboard" />
 </androidx.constraintlayout.widget.ConstraintLayout>
