Progressing on Recipe

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/title_parenthood" />
 
     <item
+        android:id="@+id/navigation_recipe"
+        android:icon="@drawable/ic_dish"
+        android:title="@string/recipes" />
+
+    <item
         android:id="@+id/navigation_account"
         android:icon="@drawable/ic_user"
         android:title="@string/title_account" />
