--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,6 +17,11 @@
         tools:layout="@layout/fragment_parenthood" />
 
     <fragment
+        android:id="@+id/navigation_recipe"
+        android:name="com.mellagusty.hacigo_mobileapp.ui.recipes.recipesFragment"
+        tools:layout="@layout/fragment_recipes"/>
+
+    <fragment
         android:id="@+id/navigation_account"
         android:name="com.mellagusty.hacigo_mobileapp.ui.account.AccountFragment"
         tools:layout="@layout/fragment_account" />
