Progress on Recipes

--- a/app/src/main/res/layout/fragment_journal_bottom.xml
+++ b/app/src/main/res/layout/fragment_journal_bottom.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     app:behavior_peekHeight="40dp"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
 
     <FrameLayout
