--- a/app/src/main/res/layout/fragment_parenthood.xml
+++ b/app/src/main/res/layout/fragment_parenthood.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/title"
@@ -18,7 +18,7 @@
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/prime"
             android:textSize="25sp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -30,6 +30,7 @@
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/black"
             android:layout_margin="30dp"
+            android:textSize="18sp"
             android:text="Acara"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"/>
@@ -42,6 +43,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_event"
             tools:listitem="@layout/item_rv_event"/>
+        <TextView
+            android:id="@+id/tv_swipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_light"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:text="Geser Kanan ->"
+            app:layout_constraintTop_toBottomOf="@id/tv_event"
+            />
 
         <TextView
             android:id="@+id/tv_article"
@@ -50,6 +63,7 @@
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/black"
             android:layout_margin="30dp"
+            android:textSize="18sp"
             android:text="Artikel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rv_event"/>
@@ -59,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_article"
             tools:listitem="@layout/item_rv_article"/>
