--- a/app/src/main/res/layout/activity_recipes_detail.xml
+++ b/app/src/main/res/layout/activity_recipes_detail.xml
@@ -78,6 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_reguler"
             app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +104,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
             android:fontFamily="@font/poppins_reguler"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
