--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -19,7 +19,7 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/frame_height"
+        android:layout_height="125dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@color/prime"
@@ -29,9 +29,11 @@
             android:id="@+id/command"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:text="@string/command"/>
+            android:textColor="@color/white"
+            android:text="Arahkan kamera ke bahan makanan\n Ada resep sesuai pedoman gizi seimbang\n berdasarkan bahan makanan ini lho !"/>
 
     </RelativeLayout>
 
@@ -45,7 +47,7 @@
     <RelativeLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/frame_height"
+        android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@color/prime"
