--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -202,29 +202,29 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/tv_title_grow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
-            android:textColor="@color/black"
-            android:text="@string/kiddo_grow_chart"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_parenthood"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_title_grow"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/poppins_medium"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:text="@string/kiddo_grow_chart"-->
+<!--            android:layout_marginTop="40dp"-->
+<!--            android:layout_marginStart="50dp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/cv_parenthood"/>-->
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_grow"
-            android:layout_width="300dp"
-            android:layout_height="190dp"
-            android:layout_marginTop="40dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title_grow"/>
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/cv_grow"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="190dp"-->
+<!--            android:layout_marginTop="40dp"-->
+<!--            app:cardCornerRadius="5dp"-->
+<!--            app:cardElevation="2dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/tv_title_grow"/>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
