--- a/app/src/main/res/layout/item_rv_recipe.xml
+++ b/app/src/main/res/layout/item_rv_recipe.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="30dp"
-        app:cardBackgroundColor="@color/ColorPurpleNote"
-        app:cardCornerRadius="15dp"
+        app:cardBackgroundColor="@color/prime"
+        app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
