--- a/app/src/main/res/layout/activity_recipes_detail.xml
+++ b/app/src/main/res/layout/activity_recipes_detail.xml
@@ -61,6 +61,50 @@
             app:layout_constraintTop_toBottomOf="@id/tv_title_recipe"
             tools:text="Mpasi bergizi yang pas untuk si kecil"/>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_nutrition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="15dp"
+            app:cardBackgroundColor="@color/pink"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_subTitle_recipe">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/title_nutrition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="Fakta Nutrisi !" />
+
+            <TextView
+                android:id="@+id/desc_nutrition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title_nutrition"
+                android:layout_margin="20dp"
+                android:fontFamily="@font/poppins_reguler"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                tools:text="Kandungan brokoli dengn air" />
+
+        </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
         <TextView
             android:id="@+id/text_bahan"
             android:layout_width="match_parent"
@@ -71,7 +115,7 @@
             android:textColor="@color/prime"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_subTitle_recipe"/>
+            app:layout_constraintTop_toBottomOf="@id/cv_nutrition"/>
 
         <TextView
             android:id="@+id/tv_bahan"
