--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -157,6 +157,7 @@
             android:layout_width="300dp"
             android:layout_height="180dp"
             android:layout_marginTop="40dp"
+            android:layout_marginBottom="30dp"
             app:cardCornerRadius="15dp"
             app:cardElevation="9dp"
             app:layout_constraintEnd_toEndOf="parent"
